@@ -5,7 +5,7 @@ global:
     - ROOT: /home/jillian/projects/perl/BioX-Workflow/example/bydir/DATA
     - indir: /home/jillian/projects/perl/BioX-Workflow/example/bydir/DATA
     - outdir: /home/jillian/projects/perl/BioX-Workflow/example/bydir/OUT
-    - file_rule: (SAMPLE.*)$
+    - file_rule: (.*)$
     - by_sample_outdir: 1
     - find_by_dir: 1
 rules:
@@ -31,5 +31,11 @@ rules:
             echo "Working on {$self->{indir}}/{$sample}.csv" && \
                 echo "This should be UNDEF {$self->TRIMMOMATIC}" && \
                 cp "{$self->{indir}}/{$sample}.csv" "{$self->{outdir}}/{$sample}.csv"
+    - no_outdir:
+        local:
+            - create_outdir: 0
+        process: |
+            "there should be no outdir\n";
+
 
 
